--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -4,7 +4,7 @@ email: skyksit@gmail.com
 description: |
   새롭게 지속적인 변화에 맞추어 유연한 생각과 태도로 변화를 수용합니다.
 baseurl: ''
-url: 'http://skyksit.github.io'
+url: 'http://192.168.232.70:4000'
 timezone: Asia/Seoul
 
 encoding: utf-8
